tests/paczka1/fuzzy1/80438409.err
Error in line 10: 4Wp3I A80G 87,7
Error in line 4: BmNH1I0 S368 8,5
Error in line 11: BmNH1I0 S183 9,8
Error in line 16: BmNH1I0 A847 49,5
Error in line 17: BmNH1I0 S183 51,5
Error in line 20: BmNH1I0 A847 29,8
Error in line 27: emORFJJ Az06 153,7
Error in line 21: Ycu A806 91,5
Error in line 15: 4Wp3I A806 390,3
Error in line 31: emORFJJ A806 60,4
Error in line 35: emORFJJ A847 83,0
Error in line 32: 4Wp3I S368 49,0
